[gd_scene load_steps=4 format=2]

[ext_resource path="res://Haters/Security_guard.gd" type="Script" id=1]
[ext_resource path="res://Haters/Images/Drone.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 62.2649
height = 0.0

[node name="Security" type="Area2D"]
position = Vector2( -2.05948, -72.465 )
collision_layer = 32
collision_mask = 91
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.794601, -1.58919 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
position = Vector2( -1.20488, 4.50883 )
texture = ExtResource( 2 )
flip_h = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="TimerAttack" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Security_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Security_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
